added IDEA meta data file extensions to the ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,8 @@ hs_err_pid*
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion
 
 *.iml
+*.ipr
+*.iws
 
 ## Directory-based project format:
 .idea/
